src/objects/Delivered2__c.object
<CustomObject>
    <fields>
        <fullName>Community__c</fullName>
        <formula>Idea__r.Community.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>What do you want to message to your community about this idea?</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <formula>HYPERLINK(   Resources_URL__c , IMAGE(  Image_URL__c  ,&quot;Image Not Available&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Idea</label>
        <referenceTo>Idea</referenceTo>
        <relationshipName>Delivered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Posted_By__c</fullName>
        <formula>Idea__r.CreatedBy.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Posted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <formula>Project__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Ideas_Projects__c</referenceTo>
        <relationshipLabel>Delivered</relationshipLabel>
        <relationshipName>Delivered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <picklist>
            <picklistValues>
                <fullName>Winter &apos;08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring &apos;08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer &apos;08</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resources_URL__c</fullName>
        <label>Resources URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Subtitle__c</fullName>
        <label>Subtitle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <label>Delivered</label>
    <listViews>
        <fullName>Spring08Release</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>Spring &apos;08 Release</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Idea</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivered</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>